# linear-algebra

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE.txt  README.md  index.html  license.html  mkdocs.yml  objects.inv  package-lock.json  pyproject.toml  ref_symbolic_mod.py  requirements.txt  scrap.ipynb  sitemap.xml  symbolic.py  test.ipynb  todo.txt
.github/workflows/: ci.yml  coverage.yml  docs.yml  release.yml  test.yml
Tutorials/Tut01/: index.html
Tutorials/Tut02/: index.html
Tutorials/Tut03/: index.html
Tutorials/Tut04/: index.html
Tutorials/Tut05/: index.html
Tutorials/Tut06/: index.html
Tutorials/Tut07/: index.html
Tutorials/Tut08/: index.html
Tutorials/Tut09/: index.html
Tutorials/Tut10/: index.html
Tutorials/Tut11/: index.html
Tutorials/Tutorial/: index.html
Tutorials/TutorialQuestions/: index.html
api/: custom_types.html  inherited.html  symbolic.html  utils.html
api/SUMMARY/: index.html
archive/: MA1522.ipynb  final.py  final2.py  gs.py  ref_symbolic.py  ref_symbolic_mod copy.py  ref_symbolic_mod copy_2.py  ref_symbolic_mod_old.py  test copy.ipynb
docs/: index.md  scrap.ipynb
examples/: scrap.ipynb  tmp.ipynb
jupyterlite/: jupyter-lite.json
license/: index.html
linear_algebra.egg-info/: PKG-INFO  SOURCES.txt
live/: demo.html
ma1522_linear_algebra.egg-info/: PKG-INFO
ma1522_linear_algebra_yeeshin504.egg-info/: PKG-INFO  SOURCES.txt
scrap/: index.html
search/: search_index.js  search_index.json
src/: custom_types.py  printer.py  reductions.py  symbolic.py  tmp.py  utils.py
tests/: COMMENTS.md  test_arithmetic_operators.py  test_basic_manipulators.py  test_basic_manipulators_2.py  test_c1_linear_systems.py  test_c3_euclidean_vector_spaces.py  test_c4_subspaces_assoc_matrix.py  test_c5_orthogonality_and_lss.py  test_c6_eigen_analysis.py  test_c7_linear_transformation.py  test_custom_types.py  test_decompositions.py  test_dunder_methods.py  test_factory.py  test_factory_methods.py  test_manipulator.py  test_reductions.py  test_rref_cases.py  test_tut01.py  test_utils.py  test_verbosity.py  test_workers.py
tutorials/: tut01.html  tut02.html  tut03.html  tut04.html  tut05.html  tut06.html  tut07.html  tut08.html  tut09.html  tut10.html  tut11.html  tutorial.html
(+95 files in other folders)
