[project]
name = "ma1522-linear-algebra"
version = "1.2.0"
description = "Python scripts for NUS MA1522 Linear Algebra for Computing"
readme = "README.md"
license = { text = "MIT" }
license-files = { paths = ["LICENSE.txt"] }
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.2",
    "sympy>=1.13.3",
    "sympy-latex-parser>=1.9.0",
]

classifiers = [
    "Development Status :: 4 - Beta",

    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",

    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Mathematics",

    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.9.2",
    "pytest>=8.3.5",
    "build>=1.2.2.post1",
    "twine>=6.2.0",
    "pytest-cov>=7.0.0",
]

docs = [
    "mkdocs-autorefs>=1.4.2",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=0.18",
    "mkdocstrings-python-xref>=1.16.3",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-jupyterlite>=0.3.2",
    "pymdown-extensions>=10.16.1",
    "pygments>=2.19.1",
]

[tool.uv]
default-groups = ["dev", "docs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ma1522"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src"]
exclude = ["docs/"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "D100", "D101", "D104", "T20", "PIE"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F401", "F841", "D", "ARG", "T20", "B017"]
"src/ma1522/symbolic.py" = ["T20", "N802", "N803", "C901"]
"src/ma1522/custom_types.py" = ["N802", "N803"]
"src/ma1522/utils.py" = ["T20"]

[tool.ruff.lint.isort]
known-first-party = ["ma1522"]
